# wm

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
src/: CMakeLists.txt  wm.h  wm_device.h  wm_error.h  wm_input.h  wm_window.h
src/glfw/: CMakeLists.txt  wm_glfw_device.c  wm_glfw_device_c.h  wm_glfw_error.c  wm_glfw_error.h  wm_glfw_input.c  wm_glfw_input.h  wm_glfw_window.c
